<resources>
    <string name="app_name">VacationDecider</string>
    <string name="txtChoose_Country">Choose Country:</string>
    <string name="txtCity">Capital:</string>
    <string name="txtHotel">Hotel:</string>
    <string name="btnCalcCost">CALCULATE COST</string>
    <string name="txtVacDecider">Vacation Decider</string>
    <string name="txtNumDays">Num. Days:</string>
    <string name="txtHotel2">Hotel:</string>
    <string name="txtCurrency">Currency:</string>
    <string name="txtPrice">Price:</string>
    <string-array name="items">
        <item>Sverige</item>
        <item>Tyskland</item>
        <item>USA</item>
        <item>Spania</item>
        <item>Tyrkia</item>
    </string-array>
</resources>
