<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_1"
    tools:context="erik.vacationdecider.MainActivity">

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="154dp"
        android:layout_height="27dp"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="80dp"

        android:layout_marginStart="80dp"
        android:layout_marginTop="16dp"
        android:background="@android:color/background_light"
        android:gravity="center"
        app:layout_constraintBottom_toTopOf="@+id/guideline_text"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        android:text="@string/txtChoose_Country"
        android:textColor="@android:color/background_dark"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@id/txtVacDec" />


    <TextView
        android:id="@+id/txtView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:text="@string/txtCity"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/cityTxt"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_text" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="8dp"
        android:layout_marginStart="80dp"
        android:text="@string/txtHotel"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_img"
        app:layout_constraintEnd_toStartOf="@+id/hotelTxt"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toBottomOf="@+id/txtView2"
        app:layout_constraintVertical_bias="0.568" />

    <ImageView
        android:id="@+id/flagImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginBottom="8dp"

        android:layout_marginEnd="80dp"
        android:layout_marginStart="80dp"
        android:layout_marginTop="8dp"
        android:scaleType="centerInside"
        app:layout_constraintBottom_toTopOf="@+id/guideline_img_bottom"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="@+id/guideline_img"
        app:layout_constraintVertical_bias="0.451"
        app:srcCompat="@mipmap/ic_launcher" />

    <TextView
        android:id="@+id/cityTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="80dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="12dp"
        android:text="CityText"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toEndOf="@+id/txtView2"
        app:layout_constraintTop_toTopOf="@+id/guideline_text" />

    <TextView
        android:id="@+id/hotelTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_marginEnd="80dp"
        android:layout_marginStart="8dp"
        android:text="HotelText"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline_img"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintStart_toEndOf="@+id/textView3"
        app:layout_constraintTop_toBottomOf="@+id/cityTxt"
        app:layout_constraintVertical_bias="0.568" />

    <Button
        android:id="@+id/btnCalc"
        style="@style/Widget.AppCompat.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:text="@string/btnCalcCost"
        android:textColor="@android:color/background_dark"
        android:textColorLink="@android:color/background_dark"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintHorizontal_bias="0.529"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_left" />

    <TextView
        android:id="@+id/txtVacDec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        android:text="@string/txtVacDecider"
        android:textColor="@android:color/background_dark"
        android:textSize="35sp"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toStartOf="@+id/guideline_right"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_left"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_right"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.9" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_left"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.1" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.35" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.52" />

    <android.support.constraint.Guideline
        android:id="@+id/guideline_img_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75" />

</android.support.constraint.ConstraintLayout>
